[package]
name = "sync-demo"
version = "0.1.0"
authors = ["Semen Evdokimov <evdokimovs@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-signals = "0.3"
tokio =  { version = "0.3", features = ["full"] }
futures = "0.3"
medea-reactive = { path = "../medea/crates/medea-reactive" }